--- a/prac_1_272/Views/Student/StudentList.cshtml
+++ b/prac_1_272/Views/Student/StudentList.cshtml
@@ -4,13 +4,13 @@
     ViewBag.Title = "StudentList";
 }
 
-<h2>StudentList</h2>
+<h2>List of students</h2><!--STEP 3: ADD VIEW: Added as list-->
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
+    <tr class="header">
         <th>
             @Html.DisplayNameFor(model => model.StudentNum)
         </th>
@@ -23,7 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.myLink)
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -40,10 +42,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
+
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            <a href="@Url.Content(item.myLink)" onclick="window.location'@Url.Action("StudentList", "StudentController")'" class="custom-btn">LINK</a>
         </td>
     </tr>
 }
