--- a/prac_1_272/Views/Shared/_Layout.cshtml
+++ b/prac_1_272/Views/Shared/_Layout.cshtml
@@ -6,6 +6,38 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <style>
+        body {
+            background-color: #615fce;
+        }
+
+        .table, th, td{
+            border: 1px solid;
+            border-color: black;
+        }
+
+        .header {
+            background-color: #00008B;
+            color: white;
+        }
+
+        .custom-btn {
+            background-color: #00008B;
+            color: white;
+            text-decoration: none;
+            border-radius: 3px;
+            padding: 5px 10px;
+        }
+
+        /*.create-btn {
+            background-color: #22C55E;
+            color: white;
+            text-decoration: none;
+            border-radius: 3px;
+            padding: 5px 10px;
+        }*/
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
